refactor: add in auth middleware role
